--- a/docs/2. Classes.md
+++ b/docs/2. Classes.md
@@ -4,4 +4,4 @@
 Полный список доступных классов:
 
 - [`avtomon\_PDO`](avtomon/_PDO.md) &mdash; Обертка для PDO
-- [`avtomon\_PDOException`](avtomon/_PDOException.md) &mdash; Класс исключений
+- [`avtomon\_PDOException`](avtomon/_PDOException.md) &mdash; _PDO представляет собой класс-обертку для взаимодествия PHP-приложения с СУБД PostgreSQL и MySQL.
