--- a/docs_en/1. Namespaces.md
+++ b/docs_en/1. Namespaces.md
@@ -1,6 +1,6 @@
-Name space
+Namespaces
 =================
 
 Full list of namespaces:
 
-- No namespaces available.
+- There are no namespaces available.
