--- a/docs_en/2. Classes.md
+++ b/docs_en/2. Classes.md
@@ -3,4 +3,5 @@ Classes
 
 Full list of available classes:
 
-- There are no classes available.
+  - [`avtomon\CachePDO`](avtomon/CachePDO.md) &mdash; CachePDO is a wrapper class for the interoperability of a PHP application with PostgreSQL and MySQL.
+  - [`avtomon\CachePDOException`](avtomon/CachePDOException.md) &mdash; Error class
