--- a/docs_ru/2. Classes.md
+++ b/docs_ru/2. Classes.md
@@ -3,4 +3,5 @@
 
 Полный список доступных классов:
 
-- Нет доступных классов.
+- [`avtomon\CachePDO`](avtomon/CachePDO.md) &mdash; CachePDO представляет собой класс-обертку для взаимодествия PHP-приложения с СУБД PostgreSQL и MySQL.
+- [`avtomon\CachePDOException`](avtomon/CachePDOException.md) &mdash; Класс ошибки
